2021-02-02
  transcript loader: added code to detect and remove obsolete exons

2020-12-03
  logging fix: conflicts.txt file is no longer appended to

2020-09-24
  for scaffold assemblies: when loading positions, Genebank chromosome accessions
    are replaced with RefSeq accessions

2020-09-22
  transcript loader: added loading of UTR regions

2020-09-16
  dao tuneup: replaced custom sql code with a call to rgdcore

2020-09-08
  tuned up handling of transcript versions
  improved reporting: separated conflict report from summary report

2020-08-26
  downloads the files in compressed format
  added handling of transcript versions (STABLE_TRANSCRIPTS table)

2020-08-06
  transcripts loader summary: shows count of inserted transcripts

2020-07-31
  added assembly map verification for all species
  added chinchilla to list of processed species

2020-05-28
  replaced some custom sql queries with rgdcore equivalents for better code maintainability

2020-05-27
  fixed Ensembl query for dog

2020-04-16
  added logging of xdb ids
  added script run_ensembl.sh that was used on PROD but never had been committed to git

2020-03-16
  tuned up logging
  
2020-03-10
  new genes: nomenclature event (status='PROVISIONAL') with ref_key=20683 is automatically generated only for RAT genes

2020-03-05
  new genes: when added, a nomenclature event (status='PROVISIONAL') with ref_key=20683 is automatically generated
  code refactored to handle rgdcore API changes for NCBI and Ensembl assembly maps