@@ -84,3 +84,13 @@ log4j.appender.exons_inserted.Append=true
 log4j.appender.exons_inserted.File=logs/exons_inserted.log
 log4j.appender.exons_inserted.layout=org.apache.log4j.PatternLayout
 log4j.appender.exons_inserted.layout.ConversionPattern=[%d] - %m%n
+
+######## utrs removed
+log4j.logger.utrs_removed=debug, utrs_removed
+log4j.additivity.utrs_removed=false
+log4j.appender.utrs_removed=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.utrs_removed.DatePattern='.'yyyy-MM
+log4j.appender.utrs_removed.Append=true
+log4j.appender.utrs_removed.File=logs/utrs_removed.log
+log4j.appender.utrs_removed.layout=org.apache.log4j.PatternLayout
+log4j.appender.utrs_removed.layout.ConversionPattern=[%d] - %m%n
